M-AGE # 14.2- UNSTABLE - Path changes implementation 3

--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -105,6 +105,7 @@
 	tec_situation_final_decision:0 "§R$trigger_tec_warning$ This is a final option§!"
 
 	tec_situation_continues_good:0 "TODO ASCENSION"
+	tec_situation_continues_normal:0 "TODO ASCENSION"
 	tec_situation_slowed_by_tech:0 "TODO ASCENSION"
 
 	tec_situation_slower_notech_biological:0 "Not having the §Y£society£ $tech_gene_tailoring$§ technology researched is §RSlowing§! this situation."
@@ -113,6 +114,9 @@
 	tec_situation_slower_notech_synthetics_machine:0 "Not having the §Y£engineering£ $tech_robomodding_m$§ technology researched is §RSlowing§! this situation."
 	tec_situation_slower_notech_machines:0 "$tec_situation_slower_notech_synthetics_machine$"
 	tec_situation_slower_notech_mystical:0 "Not having both the §Y£society£ $tech_psionic_theory$§ and §Y£society£ $tech_telepathy$§ technologies researched is §RSlowing§! this situation."
+
+	tec_advanced_ascensions_unlocked:0 "TODO ASCENSION"
+
  # /
 # /
 
@@ -1226,7 +1230,7 @@ tech_reverse_advanced_dome: " "
 	situation_tec_ascension_biological_genetics_t1_approach_basic_tooltip:0 "Iterative studies will ensure a safe and reliable progress in our investigation."
 	situation_tec_ascension_biological_genetics_t1_approach_basic_string:0 "$situation_tec_ascension_biological_genetics_t1_approach_basic$"
 	situation_tec_ascension_biological_genetics_t1_approach_fast:0 "Meticulous Study"
-	situation_tec_ascension_biological_genetics_t1_approach_fast_tooltip:0 "Protecting the genetic integrity of our species will ensure any controlled mutations and genetic anomalies will show, eventually; There is no possible risk on."
+	situation_tec_ascension_biological_genetics_t1_approach_fast_tooltip:0 "We have to shift all our efforts towards force the apparition of genetic anomalies we can study and catalog, no matter the risk."
 	situation_tec_ascension_biological_genetics_t1_approach_fast_string:0 "$situation_tec_ascension_biological_genetics_t1_approach_fast$"
 	situation_tec_ascension_biological_genetics_t1_approach_unused:0 "NeoCell Study"
 	situation_tec_ascension_biological_genetics_t1_approach_unused_tooltip:0 "Focus will shift towards studying the new anomalous stem cells, which can allow a better manipulation of genetic structures." 
@@ -2728,8 +2732,6 @@ tech_reverse_advanced_dome: " "
 	#tec_gene_path.10090.a.tooltip:0 "The situation will advance rapidly towards the final outcome: Obtaining the desired Genetic Malleability."
 	#tec_gene_path.10090.b:0 "Shift efforts to the new cells"
 	#tec_gene_path.10090.b.tooltip:0 "We will obtain the §R$situation_approach_tec_gene_path_t1_bio$§! approach.\nThe situation will advance rapidly towards the new outcome, finding a new use for the Genetic Malleability."
-
-
 # /
 # --------------- GENE T1
  # --------------- GENE T1 SITUATION
@@ -2740,13 +2742,13 @@ tech_reverse_advanced_dome: " "
 	tec_gene_path.10050.desc.biohive:0 "$tec_gene_path.10050.desc.regular$"
 	tec_gene_path.10050.desc.biomech_hive:0 "$tec_gene_path.10050.desc.regular$"
 	tec_gene_path.10050.regular:0 "We will be architects of our destiny"
-	tec_gene_path.10050.regular.tooltip:0 "TODO ASCENSION"
+	tec_gene_path.10050.regular.tooltip:0 "$tec_situation_continues_normal$"
 	tec_gene_path.10050.regular.notech:0 "We should focus on unlocking further §Y$tec_loc_society_icon$ Genetic Technologies§!"
-	tec_gene_path.10050.regular.notech.tooltip:0 "TODO ASCENSION"
+	tec_gene_path.10050.regular.notech.tooltip:0 "$tec_situation_continues_normal$"
 	tec_gene_path.10050.hive:0 "We will improve, our collective wil be more."
-	tec_gene_path.10050.hive.tooltip:0 "TODO ASCENSION"
+	tec_gene_path.10050.hive.tooltip:0 "$tec_situation_slower_notech_biological$"
 	tec_gene_path.10050.hive.notech:0 "$tec_gene_path.10050.regular.notech$"
-	tec_gene_path.10050.hive.notech.tooltip:0 "TODO ASCENSION"
+	tec_gene_path.10050.hive.notech.tooltip:0 "$tec_situation_slower_notech_biological$"
 
 	tec_gene_path.10060.name:0 "Tailoring Our Own Selves"
 	tec_gene_path.10060.desc.regular:0 "The first step for uncovering the secrets of a perfected genetic edition is to find the proper combination of genes that suit the purpose of moving our species to the right direction; Several pairs, triads and quad groups, out of already discovered positive genetic groups, have resulted compatible, but we need to find the ones that really result in a perfect mixture."
@@ -2757,11 +2759,11 @@ tech_reverse_advanced_dome: " "
 	tec_gene_path.10060.regular:0 "Intriguing, continue the research"
 	tec_gene_path.10060.regular.tooltip:0 "$tec_situation_continues_good$"
 	tec_gene_path.10060.regular.notech:0 "We should develop better §Y$tec_loc_society_icon$ Genetic Technologies§!..."
-	tec_gene_path.10060.regular.notech.tooltip:0 "TODO ASCENSION"
+	tec_gene_path.10060.regular.notech.tooltip:0 "$tec_situation_slower_notech_biological$"
 	tec_gene_path.10060.hive:0 "We must experiment more!"
-	tec_gene_path.10060.hive.tooltip:0 "TODO ASCENSION"
+	tec_gene_path.10060.hive.tooltip:0 "$tec_situation_continues_good$"
 	tec_gene_path.10060.hive.notech:0 "$tec_gene_path.10060.regular.notech$"
-	tec_gene_path.10060.hive.notech.tooltip:0 "TODO ASCENSION"
+	tec_gene_path.10060.hive.notech.tooltip:0 "$tec_situation_slower_notech_biological$"
 
 	tec_gene_path.10075.name:0 "Genomic Improvement"
 	tec_gene_path.10075.desc.regular:0 "We did it! We have discovered a relatively estable group of genetic patterns that allow exponential protein alterations at a celular level, unlocking a level of edition never before achievable.\n\nThis would allow a big degree of malleability to pre-existing trait and qualities of our species, as the risk of mutation is zero while the amount of tailorable changes is severely higher."
@@ -2772,11 +2774,11 @@ tech_reverse_advanced_dome: " "
 	tec_gene_path.10075.regular:0 "Genetic Malleability? Truly convenient"
 	tec_gene_path.10075.regular.tooltip:0 "$tec_situation_continues_good$"
 	tec_gene_path.10075.regular.notech:0 "We need more §Y$tec_loc_society_icon$ Genetic Technologies§! to use this discovery..."
-	tec_gene_path.10075.regular.notech.tooltip:0 "TODO ASCENSION"
-	tec_gene_path.10075.hive:0 "Further altering our drones will be a great boon"
+	tec_gene_path.10075.regular.notech.tooltip:0 "$tec_situation_slower_notech_biological$"
+	tec_gene_path.10075.hive:0 "Further altering our drones will improve us as whole."
 	tec_gene_path.10075.hive.tooltip:0 "$tec_situation_continues_good$"
 	tec_gene_path.10075.hive.notech:0 "$tec_gene_path.10075.regular.notech$"
-	tec_gene_path.10075.hive.notech.tooltip:0 "TODO ASCENSION"
+	tec_gene_path.10075.hive.notech.tooltip:0 "$tec_situation_slower_notech_biological$"
 
 	tec_gene_path.10090.name:0 "Evolutionary Mastery"
 	tec_gene_path.10090.desc.regular:0 "Gone are the days when the survival of our species was at the mercy of chance, when a [Owner.GetSpeciesName]'s fate was decided on the whims of nature, in the genetic lottery.\n\nThe Engineers of our time work not in steel and concrete, but in the very building blocks of life itself; Our advanced genetic modification, paired with the new genetic malleability discovered, will secure our future."
@@ -2821,14 +2823,14 @@ tech_reverse_advanced_dome: " "
 # --------------- GENE T1 INTERLUDE
  # --------------- GENE T1 INTERLUDE EVENT
 	tec_gene_path.150.name:0 "Redesigned Genome"
-	tec_gene_path.150.desc.standard:0 "With our recently adquired knowledge of genetic improvements, we reached an incredible point of change, but... it's not enough.\nWe theorize we can develop our capacities further,\n\n\n$tec_gene_path.150.desc.intro.variants$\n\nWe should take advantage of this opportunity as soon as possible"
+	tec_gene_path.150.desc.standard:0 "With our recently adquired knowledge of genetic improvements, we reached an incredible point of change, but... it's not enough.\nWe theorize we can develop our capacities further, by fully investing in a recombination of new, potential theoric elements that would integrate with our genomic expertise.\n\n$tec_gene_path.150.desc.intro.variants$\n\nWe should take advantage of this opportunity as soon as possible"
 	tec_gene_path.150.desc.hive:0 "$tec_gene_path.150.desc.standard$"
-	tec_gene_path.150.desc.intro.variants:0 "TODO ASCENSION"
-	tec_gene_path.150.tutorial.genetics:0 "TODO ASCENSION"
-	tec_gene_path.150.tutorial.technoorganic:0 "TODO ASCENSION"
-	tec_gene_path.150.tutorial.biomystical:0 "TODO ASCENSION"
+	tec_gene_path.150.desc.intro.variants:0 "$tec_gene_path.150.tutorial.genetics$\n\n$tec_gene_path.150.tutorial.technoorganic$\n\n$tec_gene_path.150.tutorial.biomystical$"
+	tec_gene_path.150.tutorial.genetics:0 "A further focus on the genetic field would yield the most efficient and direct results, being able to recombine existing traits into refined, enhanced and perfected elements."
+	tec_gene_path.150.tutorial.technoorganic:0 "However, we can apply our synthetic and mechanic technologies to boost our genetics, even being able to create new bodies from scratch with a perfect fusion of both fields."
+	tec_gene_path.150.tutorial.biomystical:0 "But also... we can attempt to unlock a potential never experienced by our kind, to... find a way to decypher some misteries tied to our very foundation, expanding our minds, and our reality, like never before."
 	tec_gene_path.150.ok:0 "We will improve our very selves, even more"
-	tec_gene_path.150.ok.tooltip:0 "TODO ASCENSION"
+	tec_gene_path.150.ok.tooltip:0 "$tec_advanced_ascensions_unlocked$"
  # /
 # /
 # --------------- GENE T2
@@ -2905,6 +2907,29 @@ tech_reverse_advanced_dome: " "
 	tec_gene_path.20501.b:0 "Strange, and suspicious."
 	tec_gene_path.20501.c:0 "They will never outgrow our versatility."
 	tec_gene_path.20501.d:0 "We will incorporate their genetic material soon."
+ # /
+ # --------------- GENE T2 POST ASCENSION
+	tec_gene_path.300.name:0 "Genetic Motif"
+	tec_gene_path.300.desc.regular:0 "TODO ASCENSION"
+	tec_gene_path.300.desc.hive:0 "TODO ASCENSION"
+	tec_gene_path.300.ok:0 "TODO ASCENSION"
+	tec_gene_path.300.ok.tooltip:0 "TODO ASCENSION."
+	# Social change
+	tec_gene_path.30050.name:0 "Genetic Motif"
+	tec_gene_path.30050.name.hive:0 "Genetic Motif"
+	tec_gene_path.30050.desc.regular:0 "TODO ASCENSION"
+	tec_gene_path.30050.desc.hive:0 "TODO ASCENSION"
+	tec_gene_path.30050.select.perfection:0 "We need to focus on a total perfection"
+	tec_gene_path.30050.select.perfection.tooltip:0 "Our focus of genetic improvement will change:\n- Unlocks the $living_standard_tec_assimilation_genetic_total$ assimilation, that add the main genetic perfection trait to new species.\n- We will apply our knowledge of the genetic malleability to advanced traits, reducing their cost in 1."
+	tec_gene_path.30050.select.diversity:0 "We must preserve diversity"
+	tec_gene_path.30050.select.diversity.tooltip:0 "Our focus of genetic improvement will change:\n- Unlocks the $living_standard_tec_assimilation_genetic_add$ assimilation, that add the main genetic perfection trait to new species.\n- We will apply our knowledge of the genetic malleability to advanced traits, reducing their cost in 1."
+	# Special events for sub-things if not going democratic
+
+	# Special events for sub-things
+	tec_gene_path.30025.name:0 ""
+	tec_gene_path.30025.desc:0 "TODO ASCENSION"
+	tec_gene_path.30025.ok:0 "TODO ASCENSION"
+	tec_gene_path.30025.ok.tooltip:0 "TODO ASCENSION."
  # /
  # --------------- GENE T2 RESEQUENCE MECHANIC
 	# Resequence events - tutorial
