--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -570,44 +570,71 @@
 	trait_tec_gene_main_t1_desc:0 "§LThis species is aspiring to create a perfectly tailored and maintained genetic code, which may allow it to survive any circumstance, any injury or illness, as their bodies work at a incredible speed and effectivity at a cellular level, without mutations or somatic instability.§!"
 	trait_tec_gene_main_t1_effect:0 "§GEngineered trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
-	trait_tec_gene_main_t2:0 "§YImproved Genetics§! (§YII§!)"
+	trait_tec_gene_main_t2:0 "§YRecombined Genetics§! (§YII§!)"
 	trait_tec_gene_main_t2_desc:0 "§LThis species possess the basis for a perfectly tailored and maintained genetic code, which allows it to survive any circumstance, any injury or illness, as their bodies work at a incredible speed and effectivity at a cellular level, without mutations or somatic instability.§!"
 	trait_tec_gene_main_2_effect:0 "§YRecombined trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
 	trait_tec_gene_main_t3:0 "§YGenetic Perfection§! (§HIII§!)"
 	trait_tec_gene_main_t3_desc:0 "§LThis species has a perfectly tailored and maintained genetic code, which allows it to survive any circumstance, any injury or illness, as their bodies work at a incredible speed and effectivity at a cellular level, without mutations or somatic instability.§!"
 	trait_tec_gene_main_3_effect:0 "§HPerfected trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
+
+	trait_tec_gene_main_cloning_t1:0 "TODO ASCENSION"
+	trait_tec_gene_main_cloning_t1_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_main_cloning_t1_effect:0 "TODO ASCENSION"
+
+	trait_tec_gene_main_cloning_t2:0 "TODO ASCENSION"
+	trait_tec_gene_main_cloning_t2_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_main_cloning_t2_effect:0 "TODO ASCENSION"
+
+	trait_tec_gene_main_cloning_t3:0 "TODO ASCENSION"
+	trait_tec_gene_main_cloning_t3_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_main_cloning_t3_effect:0 "TODO ASCENSION"
+
+ # /
+ # T2 Automodding
+	trait_tec_gene_automodding_t1:0 "§YTailored Mastery§! (§GI§!)"
+	trait_tec_gene_automodding_t1_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_automodding_t1_effect:0 "TODO ASCENSION"
+
+	trait_tec_gene_automodding_t2:0 "§YRecombined Mastery§! (§GII§!)"
+	trait_tec_gene_automodding_t2_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_automodding_t2_effect:0 "TODO ASCENSION"
+
+	trait_tec_gene_automodding_t3:0 "§YPerfected Mastery§! (§GIII§!)"
+	trait_tec_gene_automodding_t3_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_automodding_t3_effect:0 "TODO ASCENSION"
+ # /
  # T2 normal traits
-	trait_tec_gene_research_t1:0 "§YGenius§! (§GI§!)"
-	trait_tec_gene_research_t1_desc:0 "§LThe intellect of this species is starting to become unmatchable, as both genetic therapies and engineering are unlocking and upgrading the potential of their brains to a capacity only them can understand.§!"
-	trait_tec_gene_research_t1_effect:0 "§GEngineered trait§!\n§GLeaders from this species have additional traits and bonuses (£scientist£)§!"
+	trait_tec_gene_genius_t1:0 "§YGenius§! (§GI§!)"
+	trait_tec_gene_genius_t1_desc:0 "§LThe intellect of this species is starting to become unmatchable, as both genetic therapies and engineering are unlocking and upgrading the potential of their brains to a capacity only them can understand.§!"
+	trait_tec_gene_genius_t1_effect:0 "§GEngineered trait§!\n§GLeaders from this species have additional traits and bonuses (£scientist£)§!"
 
-	trait_tec_gene_research_t2:0 "§YGenius§! (§YII§!)"
-	trait_tec_gene_research_t2_desc:0 "§LThe intellect of this species is becoming unmatchable, as both genetic therapies and engineering are unlocking and upgrading the potential of their brains to a capacity only them can understand.§!"
-	trait_tec_gene_research_t2_effect:0 "§YRecombined trait§!\n§GLeaders from this species have additional traits and bonuses (£scientist£)§!"
+	trait_tec_gene_genius_t2:0 "§YGenius§! (§YII§!)"
+	trait_tec_gene_genius_t2_desc:0 "§LThe intellect of this species is becoming unmatchable, as both genetic therapies and engineering are unlocking and upgrading the potential of their brains to a capacity only them can understand.§!"
+	trait_tec_gene_genius_t2_effect:0 "§YRecombined trait§!\n§GLeaders from this species have additional traits and bonuses (£scientist£)§!"
 
-	trait_tec_gene_research_t3:0 "§YGenius§! (§HIII§!)"
-	trait_tec_gene_research_t3_desc:0 "§LThe intellect of this species is literally unmatchable, as both genetic therapies and engineering have unlocked and upgraded the potential of their brains to a capacity only them can understand.§!"
-	trait_tec_gene_research_t3_effect:0 "§HPerfected trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
+	trait_tec_gene_genius_t3:0 "§YGenius§! (§HIII§!)"
+	trait_tec_gene_genius_t3_desc:0 "§LThe intellect of this species is literally unmatchable, as both genetic therapies and engineering have unlocked and upgraded the potential of their brains to a capacity only them can understand.§!"
+	trait_tec_gene_genius_t3_effect:0 "§HPerfected trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
 	#leader_trait_tec_gene_research:0 ""
 	#leader_trait_tec_gene_research_desc:0 "§L.§!"
 
 	# Unity
-	trait_tec_gene_unity_t1:0 "§YResolved§! (§GI§!)"
-	trait_tec_gene_unity_t1_desc:0 "§LThis species will is greatly enhanced via genetic modification, creating a kind of special instinct allowing each individual to avoid perils and anticipate things with an incredible precision, also sharing a kind of multi-collective yet individual sense.§!"
-	trait_tec_gene_unity_t1_effect:0 "§GEngineered trait§!\n§GLeaders from this species have additional traits and bonuses (£official£)§!"
+	trait_tec_gene_will_t1:0 "§YResolved§! (§GI§!)"
+	trait_tec_gene_will_t1_desc:0 "§LThis species will is greatly enhanced via genetic modification, creating a kind of special instinct allowing each individual to avoid perils and anticipate things with an incredible precision, also sharing a kind of multi-collective yet individual sense.§!"
+	trait_tec_gene_will_t1_effect:0 "§GEngineered trait§!\n§GLeaders from this species have additional traits and bonuses (£official£)§!"
 
-	trait_tec_gene_unity_t2:0 "§YResolved§! (§YII§!)"
-	trait_tec_gene_unity_t2_desc:0 "§LThis species will is greatly enhanced via genetic modification, creating a kind of special instinct allowing each individual to avoid perils and anticipate things with an incredible precision, also sharing a kind of multi-collective yet individual sense.§!"
-	trait_tec_gene_unity_t2_effect:0 "§YRecombined trait§!\n§GLeaders from this species have additional traits and bonuses (£official£)§!"
+	trait_tec_gene_will_t2:0 "§YResolved§! (§YII§!)"
+	trait_tec_gene_will_t2_desc:0 "§LThis species will is greatly enhanced via genetic modification, creating a kind of special instinct allowing each individual to avoid perils and anticipate things with an incredible precision, also sharing a kind of multi-collective yet individual sense.§!"
+	trait_tec_gene_will_t2_effect:0 "§YRecombined trait§!\n§GLeaders from this species have additional traits and bonuses (£official£)§!"
 
-	trait_tec_gene_unity_t3:0 "§YResolved§! (§HIII§!)"
-	trait_tec_gene_unity_t3_desc:0 "§LThis species will is greatly enhanced via genetic modification, creating a kind of special instinct allowing each individual to avoid perils and anticipate things with an incredible precision, also sharing a kind of multi-collective yet individual sense.§!"
-	trait_tec_gene_unity_t3_effect:0 "§HPerfected trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
+	trait_tec_gene_will_t3:0 "§YResolved§! (§HIII§!)"
+	trait_tec_gene_will_t3_desc:0 "§LThis species will is greatly enhanced via genetic modification, creating a kind of special instinct allowing each individual to avoid perils and anticipate things with an incredible precision, also sharing a kind of multi-collective yet individual sense.§!"
+	trait_tec_gene_will_t3_effect:0 "§HPerfected trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
 
-	#leader_trait_tec_gene_unity:0 ""
-	#leader_trait_tec_gene_unity_desc:0 "§L.§!"
+	#leader_trait_tec_gene_will:0 ""
+	#leader_trait_tec_gene_will_desc:0 "§L.§!"
 
 	trait_tec_gene_fertile_t1:0 "§YFecund§! (§GI§!)"
 	trait_tec_gene_fertile_t1_desc:0 "§LThis species is radically altered to be naturally and artificially fertile and adapted to close social behaviors, feeling comfortable and developing close bounds being in proximity of other members of their own.§!"
@@ -647,6 +674,126 @@
 	trait_tec_gene_audacious_t3:0 "§YAudacious§! (§HIII§!)"
 	trait_tec_gene_audacious_t3_desc:0 "§LCreative capacities of this species surpass the expected on perfection, making anything better with meticulous and precise work.§!"
 	trait_tec_gene_audacious_t3_effect:0 "§HPerfected trait§!\n§GLeaders from this species have additional traits and bonuses ($tec_loc_all_leaders$)§!"
+	# Lifespan
+	trait_tec_gene_lifespan_t1:0 "TODO ASCENSION"
+	trait_tec_gene_lifespan_t1_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_lifespan_t1_effect:0 "TODO ASCENSION"
+
+	trait_tec_gene_lifespan_t2:0 "TODO ASCENSION"
+	trait_tec_gene_lifespan_t2_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_lifespan_t2_effect:0 "TODO ASCENSION"
+
+	trait_tec_gene_lifespan_t3:0 "TODO ASCENSION"
+	trait_tec_gene_lifespan_t3_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_lifespan_t3_effect:0 "TODO ASCENSION"
+	# Metabolic
+	trait_tec_gene_metabolic_t1:0 "TODO ASCENSION"
+	trait_tec_gene_metabolic_t1_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_metabolic_t1_effect:0 "TODO ASCENSION"
+
+	trait_tec_gene_metabolic_t2:0 "TODO ASCENSION"
+	trait_tec_gene_metabolic_t2_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_metabolic_t2_effect:0 "TODO ASCENSION"
+
+	trait_tec_gene_metabolic_t3:0 "TODO ASCENSION"
+	trait_tec_gene_metabolic_t3_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_metabolic_t3_effect:0 "TODO ASCENSION"
+	# Energy
+	trait_tec_gene_energy_t1:0 "§YTailored Wit§! (§HI§!)"
+	trait_tec_gene_energy_t1_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_energy_t1_effect:0 "TODO ASCENSION"
+
+	trait_tec_gene_energy_t2:0 "§YRecombined Wit§! (§HII§!)"
+	trait_tec_gene_energy_t2_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_energy_t2_effect:0 "TODO ASCENSION"
+
+	trait_tec_gene_energy_t3:0 "§YPerfected Wit§! (§HIII§!)"
+	trait_tec_gene_energy_t3_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_energy_t3_effect:0 "TODO ASCENSION"
+	# Mining
+	trait_tec_gene_mining_t1:0 "§YTailored Mining§! (§HI§!)"
+	trait_tec_gene_mining_t1_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_mining_t1_effect:0 "TODO ASCENSION"
+
+	trait_tec_gene_mining_t2:0 "§YRecombined Mining§! (§HII§!)"
+	trait_tec_gene_mining_t2_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_mining_t2_effect:0 "TODO ASCENSION"
+
+	trait_tec_gene_mining_t3:0 "§YPerfected Mining§! (§HIII§!)"
+	trait_tec_gene_mining_t3_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_mining_t3_effect:0 "TODO ASCENSION"
+	# Food
+	trait_tec_gene_farming_t1:0 "§YTailored Cultivation§! (§HI§!)"
+	trait_tec_gene_farming_t1_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_farming_t1_effect:0 "TODO ASCENSION"
+
+	trait_tec_gene_farming_t2:0 "§YRecombined Cultivation§! (§HII§!)"
+	trait_tec_gene_farming_t2_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_farming_t2_effect:0 "TODO ASCENSION"
+
+	trait_tec_gene_farming_t3:0 "§YPerfected Cultivation§! (§HII§!)"
+	trait_tec_gene_farming_t3_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_farming_t3_effect:0 "TODO ASCENSION"
+	# Industry
+	trait_tec_gene_industry_t1:0 "§YTailored Manufacturing§! (§HI§!)"
+	trait_tec_gene_industry_t1_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_industry_t1_effect:0 "TODO ASCENSION"
+
+	trait_tec_gene_industry_t2:0 "§YRecombined Manufacturing§! (§HII§!)"
+	trait_tec_gene_industry_t2_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_industry_t2_effect:0 "TODO ASCENSION"
+
+	trait_tec_gene_industry_t3:0 "§YPerfected Manufacturing§! (§HIII§!)"
+	trait_tec_gene_industry_t3_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_industry_t3_effect:0 "TODO ASCENSION"
+	# Research
+	trait_tec_gene_research_t1:0 "§YTailored Intellect§! (§HI§!)"
+	trait_tec_gene_research_t1_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_research_t1_effect:0 "TODO ASCENSION"
+
+	trait_tec_gene_research_t2:0 "§YRecombined Intellect§! (§HII§!)"
+	trait_tec_gene_research_t2_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_research_t2_effect:0 "TODO ASCENSION"
+
+	trait_tec_gene_research_t3:0 "§YPerfected Intellect§! (§HIII§!)"
+	trait_tec_gene_research_t3_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_research_t3_effect:0 "TODO ASCENSION"
+	# Unity
+	trait_tec_gene_unity_t1:0 "§YTailored Harmony§! (§HI§!)"
+	trait_tec_gene_unity_t1_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_unity_t1_effect:0 "TODO ASCENSION"
+
+	trait_tec_gene_unity_t2:0 "§YRecombined Harmony§! (§HII§!)"
+	trait_tec_gene_unity_t2_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_unity_t2_effect:0 "TODO ASCENSION"
+
+	trait_tec_gene_unity_t3:0 "§YPerfected Harmony§! (§HIII§!)"
+	trait_tec_gene_unity_t3_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_unity_t3_effect:0 "TODO ASCENSION"
+	# Amenities
+	trait_tec_gene_amenities_t1:0 "§YTailored Caretaking§! (§HI§!)"
+	trait_tec_gene_amenities_t1_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_amenities_t1_effect:0 "TODO ASCENSION"
+
+	trait_tec_gene_amenities_t2:0 "§YRecombined Caretaking§! (§HII§!)"
+	trait_tec_gene_amenities_t2_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_amenities_t2_effect:0 "TODO ASCENSION"
+
+	trait_tec_gene_amenities_t3:0 "§YPerfected Caretaking§! (§HIII§!)"
+	trait_tec_gene_amenities_t3_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_amenities_t3_effect:0 "TODO ASCENSION"
+	# Trade
+	trait_tec_gene_trade_t1:0 "§YTailored Numeracy§! (§HI§!)"
+	trait_tec_gene_trade_t1_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_trade_t1_effect:0 "TODO ASCENSION"
+
+	trait_tec_gene_trade_t2:0 "§YRecombined Numeracy§! (§HII§!)"
+	trait_tec_gene_trade_t2_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_trade_t2_effect:0 "TODO ASCENSION"
+
+	trait_tec_gene_trade_t3:0 "§YPerfected Numeracy§! (§HIII§!)"
+	trait_tec_gene_trade_t3_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_gene_trade_t3_effect:0 "TODO ASCENSION"
  # /
  # Resequenced
 	# Note: adapted to chosen leviathan
@@ -918,6 +1065,12 @@
 	tec_cybernetic_augmentation_internal:0 "§CCybernetic Augmentation - Internal§!"
 	tec_cybernetic_augmentation_external:0 "§CCybernetic Augmentation - External§!"
 	tec_cybernetic_augmentation_deck:0 "§CCybernetic Augmentation - OS Deck§!"
+	tec_advanced_augmentation:0 "§CAdvanced Augmentation§!"
+	tec_advanced_augmentation_mainframe:0 "§CAdvanced Augmentation - Mainframe§!"
+	tec_advanced_augmentation_cortex:0 "§CAdvanced Augmentation - Cortex§!"
+	tec_advanced_augmentation_internal:0 "§CAdvanced Augmentation - Internal§!"
+	tec_advanced_augmentation_external:0 "§CAdvanced Augmentation - External§!"
+	tec_advanced_augmentation_deck:0 "§CAdvanced Augmentation - OS Deck§!"
 
 	tec_only_1_cybernetic_mainframe_trait:0 "\n§R$trigger_tec_warning_red$Only one Cybernetic Mainframe can be added to this species. Developing new cybernetic advancements can allow further modifications.§!"
 	tec_only_2_cybernetic_mainframe_trait:0 "\n§R$trigger_tec_warning_red$This species has already augmented its body with a Cybernetic Mainframe.§!"
