--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -529,6 +529,10 @@ tec_cui_tec_ai_empire_leader_loc: "Leader (non-AI Nodes)"
  modifier_tec_debug_test_megastructures_desc:0 "a"
  modifier_tec_debug_test_megastructures_tooltip:0 "a"
 
+ modifier_tec_debug_automodding:0 "z-DEBUG-AUTOMODDING"
+ modifier_tec_debug_automodding_desc:0 "a"
+ modifier_tec_debug_automodding_tooltip:0 "a"
+
 # Debug Windows
 tec_debug_no:0 "§RNo§!"
 tec_debug_yes:0 "§GYes§!"
