feat: more pre game empire creation concepts and improvements in tooltips

--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -1,7 +1,15 @@
 ﻿l_english:
+	# overwriting vanilla if origin/civic key contains brackets for compat civic/origins
 
+	TRIGGER_HAS_ORIGIN:2 "Has ['civic:$ORIGIN$'] Origin"
+	TRIGGER_NOT_HAS_ORIGIN:2 "Does NOT have ['civic:$ORIGIN$'] Origin"
+	TRIGGER_HAS_CIVIC:3 "Has ['civic:$CIVIC$'] Civic"
+	TRIGGER_NOT_HAS_CIVIC:3 "Does NOT have ['civic:$CIVIC$'] Civic"
 # MISC replaces
 # ------------------------------------------------------------
+	CORPORATE_COUNTRY_MODIFIER:0 "£empire£§YCorporate Empire§! §EEffects§!:"
+	COUNTRY_MODIFIER:0 "$EMPIRE_EFFECTS_W_ICON$:"
+
  BRANCH_OFFICE_BUILDING:0 "Holding Building"
  BRANCH_OFFICE_BUILDINGS:0 "Holding Buildings"
 mod_job_preacher_trade_value_add: "£trade_value£ Trade Value from £job_preacher£ $job_preacher_plural$"
@@ -318,11 +326,11 @@ trade_value_1:0 "$trade_federation$"
 trade_value_2:0 "Standardization of Measures"
 
 
-concept_hegemony_federation_desc: "$hegemony_federation_desc$\n\n§ERequirements:§!\nOne of the following:\n- $civic_tooltip_authoritarian$\n- Has §I$civic_machine_servitor$§! Civic\n- Has §I$civic_tec_hive_brood_overminds$§! Civic"
-concept_military_federation_desc: "$military_federation_desc$\n\n§ERequirements:§!\nOne of the following:\n- $civic_tooltip_militarist$\n- Has §I$civic_hive_strength_of_legions$§! Civic\n- Has §I$civic_machine_warbots$§! Civic\n- Has §I$civic_tec_machine_warform_cluster$§! Civic"
-concept_research_federation_desc: "$research_federation_desc$\n\n§ERequirements:§!\nOne of the following:\n- $civic_tooltip_materialist$\n- Has §I$auth_machine_intelligence$§! Authority\n- Has §I$auth_tec_hive_cybernetic$§! Authority\n- Has §I$auth_tec_ai$§! Authority\n- Has §I$auth_tec_ai_corporate$§! Authority\n- Has §I$civic_hive_natural_neural_network$§! Civic"
-concept_trade_federation_desc: "$trade_federation_desc$\n\n§ERequirements:§!\nOne of the following:\n- $civic_tooltip_competitive$\n- Has §I$auth_corporate$§! Authority\n- Has §I$auth_tec_patrocorporate$§! Authority\n- Has §I$auth_tec_ai_corporate$§! Authority\n- Has §I$civic_tec_machine_traders$§! Civic"
-
+concept_hegemony_federation_desc: "$hegemony_federation_desc$\n\n§ERequirements:§!\nOne of the following:\n- $civic_tooltip_authoritarian$\n- Has ['civic:civic_machine_servitor'] Civic\n- Has ['civic:civic_tec_hive_brood_overminds'] Civic\n- Has ['tradition:tr_domination_finish:tr_domination_federations_finish']"
+concept_military_federation_desc: "$military_federation_desc$\n\n§ERequirements:§!\nOne of the following:\n- $civic_tooltip_militarist$\n- Has ['civic:civic_hive_strength_of_legions'] Civic\n- Has ['civic:civic_machine_warbots'] Civic\n- Has ['civic:civic_tec_machine_warform_cluster'] Civic\n- Has ['tradition:tr_unyielding_finish:tr_unyielding_federations_finish']"
+concept_research_federation_desc: "$research_federation_desc$\n\n§ERequirements:§!\nOne of the following:\n- $civic_tooltip_materialist$\n- Has ['authority:auth_machine_intelligence'] Authority\n- Has ['authority:auth_tec_hive_cybernetic'] Authority\n- Has ['concept_tec_authority_type_ai_auth_type']\n- Has ['civic:civic_hive_natural_neural_network'] Civic\n- Has ['tradition:tr_discovery_finish:tr_discovery_federations_finish']"
+concept_trade_federation_desc: "$trade_federation_desc$\n\n§ERequirements:§!\nOne of the following:\n- $civic_tooltip_competitive$\n-  Has ['concept_tec_authority_type_corporate_type']\n- Has ['civic:civic_tec_machine_traders'] Civic\n- Has ['tradition:tr_mercantile_finish:tr_mercantile_federations_finish']"
+concept_spiritualist_federation_desc: "$spiritualist_federation_desc$\n\n§ERequirements:§!\nOne of the following:\n- $civic_tooltip_spiritualist$\n- Has ['tradition:tr_harmony_finish:tr_harmony_federations_finish']"
 # modifiers
 
 mod_pop_cyborg_happiness: "§BCyborg§! Happiness"
