--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -99,7 +99,7 @@
 
 	concept_tec_ruler_replace_civic: "Ruler Replacement Civic"
 	concept_tec_ruler_replace_civics: "Ruler Replacement Civics"
-	concept_tec_ruler_replace_civic_desc: "Ruler Replacement civics are mutually exclusive, swapping a part of your normal ruler jobs to a new one. Usually ruler civics are tied to a specific ethic."
+	concept_tec_ruler_replace_civic_desc: "Ruler Replacement civics are mutually exclusive, swapping a part of your normal ruler jobs to a new one. Usually ruler civics are tied to a specific ethic.\n\nRegular $concept_tec_ruler_replace_civics$ consist of\n- ['civic:civic_exalted_priesthood']\n- ['civic:civic_aristocratic_elite']\n- ['civic:civic_merchant_guilds']\n- ['civic:civic_technocracy']\n- ['civic:civic_tec_regular_stratocracy']\n- ['civic:civic_tec_regular_irenic_bureaucracy']\n- ['civic:civic_tec_regular_archivist']\n- ['civic:civic_tec_regular_occultist']\n- ['civic:civic_tec_regular_inventinkers']\n- ['civic:civic_tec_regular_science_directorate']\n- ['civic:civic_tec_regular_overseers']\n- ['civic:civic_tec_regular_procurators']\n- ['civic:civic_tec_regular_inquisitors']\n- ['civic:civic_tec_regular_diplomats']\n- ['civic:civic_tec_regular_socialguards']\n- ['civic:civic_tec_regular_senators']\n- ['civic:civic_tec_regular_worker_coop']\n\nCorporate $concept_tec_ruler_replace_civics$ consist of\n- ['civic:civic_tec_corporate_bank_corp']\n- ['civic:civic_tec_corporate_scientific_corp']\n- ['civic:civic_tec_corporate_eco_exploiter_corp']\n- ['civic:civic_tec_corporate_eco_reclamator_corp']\n- ['civic:civic_tec_corporate_parabellum_corp']\n- ['civic:civic_tec_corporate_competition_purifiers']\n- ['civic:civic_tec_corporate_inventinker_corp']\n- ['civic:civic_tec_corporate_food_corp']\n- ['civic:civic_worker_coop']"
 
 	concept_tec_ruler_add_civic: "Ruler Addition Civic"
 	concept_tec_ruler_add_civics: "Ruler Addition Civics"
@@ -195,7 +195,7 @@
 
 	concept_tec_terraformer_civic: "Terraformer Civic"
 	concept_tec_terraformer_civics: "Terraformer Civics"
-	concept_tec_terraformer_civic_desc: "Terraformer civics are mutually exclusive, usually offering ways of boosting and enhancing planets, improving blockers or deposits, or allow the clearing of bad modifiers on planets.\n\nCommon effects of Terraformer Civics:\n- Gives have access to the ['concept_tec_decision_tec_environment_enhance_icon'] decision.\n- Blockers may provide extra jobs.\n- Removing blockers gives special planetary deposits."
+	concept_tec_terraformer_civic_desc: "Terraformer civics are mutually exclusive, usually offering ways of boosting and enhancing planets, improving blockers or deposits, or allow the clearing of bad modifiers on planets.\n\nCommon effects of Terraformer Civics:\n- Gives have access to the ['concept_tec_decision_tec_environment_enhance_icon'] decision.\n- Blockers may provide extra jobs.\n- Removing blockers gives special planetary deposits.\n\n$concept_tec_terraformer_civics$ consist of:\n- ['civic:civic_tec_regular_eco_engineers']\n- ['civic:civic_tec_regular_eco_preservers']\n- ['civic:civic_tec_regular_eco_keepers']\n- ['civic:civic_environmentalist']\n- ['civic:civic_tec_corporate_eco_reclamator_corp']\n- ['civic:civic_tec_machine_terraformers']"
 
 	concept_tec_engineer_civic: "Engineer Civic"
 	concept_tec_engineer_civics: "Engineer Civics"
@@ -212,6 +212,10 @@
 	concept_tec_restricted_diplomacy_civic: "Restricted Diplomacy Civic"
 	concept_tec_restricted_diplomacy_civics: "Restricted Diplomacy Civics"
 	concept_tec_restricted_diplomacy_civic_desc: "Restricted Diplomacy civics are mutually exclusive, as they restrict your diplomatic choices, from completely blocking you from doing diplomacy, to imposing restrictions on with who and how you can do diplomacy.\n\n$concept_tec_restricted_diplomacy_civics$ consist of\n- ['civic:civic_barbaric_despoilers']\n- ['civic:civic_pompous_purists']\n- ['civic:civic_tec_corporate_pompous']\n- ['civic:civic_tec_hive_pompous']\n- ['civic:civic_tec_machine_pompous']\n- ['civic:civic_inwards_perfection']"
+
+	concept_tec_dystopian_society_civic: "$civic_dystopian_society$"
+	concept_tec_dystopian_society_civic_desc: "$concept_tec_dystopian_society_civic$ Civics consist of \n- ['civic:civic_dystopian_society']$NEW_LINE$- ['civic:civic_tec_corporate_dystopian_society']"
+
 
 	#concept_tec_leader_civic: "Leader Civic"
 	#concept_tec_leader_civics: "Leader Civics"
